--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "caresome/filament-auth-designer": "^2.0",
         "filament/filament": "4.0",
         "filament/spatie-laravel-media-library-plugin": "4.0",
         "hugomyb/filament-media-action": "^4.0",
@@ -17,6 +18,7 @@
         "laravel/fortify": "^1.30",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "leandrocfe/filament-apex-charts": "^4.0",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
         "osamanagi/filament-abyss-theme": "^1.0",
