--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": "^8.2",
         "caresome/filament-auth-designer": "^2.0",
         "filament/filament": "^4.0",
-        "filament/spatie-laravel-media-library-plugin": "4.0",
+        "filament/spatie-laravel-media-library-plugin": "^4.0",
         "hugomyb/filament-media-action": "^4.0",
         "jacobtims/filament-logger": "^1.0",
         "laravel/fortify": "^1.30",
@@ -27,6 +27,8 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laradumps/laradumps": "^4.6",
+        "laradumps/laradumps-core": "^3.2",
         "laravel/boost": "^1.6",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.18",
