update app name in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=HybatAquaFarm
 APP_ENV=local
 APP_KEY=base64:uzJamZjxD9riQJIp7iFGBTu3Y4WU/aixqC6eKQZ9OZI=
 APP_DEBUG=true
@@ -63,3 +63,4 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
