--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "achyutn/filament-log-viewer": "^1.7",
         "caresome/filament-auth-designer": "^2.0",
         "charrafimed/global-search-modal": "^4.2",
         "filament/filament": "^4.0",
