--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ APP_NAME=HybatAquaFarm
 APP_ENV=local
 APP_KEY=base64:uzJamZjxD9riQJIp7iFGBTu3Y4WU/aixqC6eKQZ9OZI=
 APP_DEBUG=true
-APP_URL=https://hybataquafarms.test
+APP_TIMEZONE="Africa/Cairo"
+APP_URL="https://hybataquafarms.test"
 
 APP_LOCALE=ar
 APP_FALLBACK_LOCALE=en
@@ -63,4 +64,3 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-
