--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "achyutn/filament-log-viewer": "^1.7",
         "caresome/filament-auth-designer": "^2.0",
+        "carlos-meneses/laravel-mpdf": "^2.1",
         "charrafimed/global-search-modal": "^4.2",
         "filament/filament": "^4.0",
         "filament/spatie-laravel-media-library-plugin": "^4.0",
